# Grafinder

./: .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
app/: __init__.py  __main__.py  config.py  db.py  main.py  models.py  schemas.py
app/services/: __init__.py  crawl.py  dashboard_designer.py  extract.py  grafana.py  llm.py  llm_registry.py  planner.py  search.py  task_runner.py
app/templates/: index.html
config/: llm_providers.example.json
grafana/provisioning/datasources/: datasource.yml
grafinder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: run_host.sh
